Update BooleanSearchEngine.java